# llp-lab3

./: .gitignore  CMakeLists.txt  README.md  examples.sh  examples.txt  parser.py
proto/: test.proto
src/client/: CMakeLists.txt  Makefile  client.c  fs_directories_data.c  helpers.c  helpers.h  main.c
src/client/net_client/: CMakeLists.txt  client.c  client.h  net_client.c  net_client.h
src/client/parser/: CMakeLists.txt  lex.yy.c  lexer.l  main.c  my_parser.c  my_parser.h  parser.y  types.c  types.h  y.tab.c  y.tab.h
src/common/: CMakeLists.txt
src/common/public/: structures.c  structures.h
src/common/public/util/: error.h  helpers.h  memory.c  memory.h  node_print.h  result.h
src/database/: CMakeLists.txt
src/database/include/private/storage/: page_manager.h
src/database/include/public/document_db/: document.h  node.h  node_conditions.h  node_value_matcher.h
src/database/include/public/storage/: file.h  page_manager.h
src/database/src/: main.c
src/database/src/document_db/: document.c  node_conditions.c  node_value_matcher.c
src/database/src/storage/: storage.c
src/database/src/storage/page/: page.c  util.c
src/database/src/storage/page_manager/: item_management.c  page_manager.c  page_manager_free_pages.c  page_manager_internal.c  page_manager_iter.c
src/rpc/: CMakeLists.txt  README.md  common.c  common.h  common.pb-c.c  common.pb-c.h  common.proto  converters.c  converters.h
src/server/: CMakeLists.txt  fs.c  fs.h  main.c  server.c  server.h
src/server/database/: CMakeLists.txt
src/server/database/include/private/document_db/: document.h
src/server/database/include/private/storage/: storage.h
src/server/database/include/public/document_db/: node.h
src/server/database/include/public/util/: log.h  maybe.h  result.h
src/server/database/src/document_db/: document.c
src/server/database/src/storage/page_manager/: page_manager.c  utils.c
src/server/include/private/storage/: file.h  file_manager.h  free_pages.h  page.h  page_manager.h
src/server/include/public/document_db/: document.h  document_tree.h  node.h
src/server/include/public/storage/: file_manager.h  page.h  storage.h
src/server/include/public/util/: common.h  error.h
src/server/src/: main.c
src/server/src/storage/: file.c  file_manager.c
src/server/src/storage/page_manager/: item_management.c  page_manager_iter.c
test/: CMakeLists.txt  common.cpp  common.h  main.cpp
test/client/: test_client.cpp
test/storage/: common.cpp  common.h  test_document.cpp  test_file.cpp  test_file_manager.cpp  test_iterator.cpp  test_page.cpp  test_page_manager.cpp  test_server_fs.cpp  test_server_handlers.cpp
